# rust-microservices

./: .gitignore
hyper-microservice/: Cargo.toml
hyper-microservice/src/: main.rs
images-microservice/: Cargo.toml
images-microservice/src/: main.rs
random-service/: Cargo.toml
random-service/src/: main.rs
rng-service/: Cargo.toml
rng-service/src/: color.rs  main.rs
rust-web-server/server/: 404.html  index.html
rust-web-server/server/src/: lib.rs
